--- a/themes/indigo/layout/_partial/header.ejs
+++ b/themes/indigo/layout/_partial/header.ejs
@@ -1,7 +1,7 @@
 <header class="top-header" id="header">
     <div class="flex-row">
         <a href="javascript:;" class="header-icon waves-effect waves-circle waves-light on" id="menu-toggle">
-          <i class="icon icon-lg icon-navicon"></i>
+            <%- load_svg('bars-sort') %>
         </a>
         <div class="flex-col header-title ellipsis"><%=title %></div>
         <% if(theme.search){ %>
@@ -11,7 +11,7 @@
             </a>
             <input type="text" id="key" class="search-input" autocomplete="off" placeholder="<%= __('global.search_input_hint') %>">
             <a href="javascript:;" class="header-icon waves-effect waves-circle waves-light" id="search">
-                <i class="icon icon-lg icon-search"></i>
+                <%- load_svg('magnifying-glass') %>
             </a>
         </div>
         <% }%>
