--- a/themes/indigo/source/css/_partial/header.less
+++ b/themes/indigo/source/css/_partial/header.less
@@ -22,6 +22,9 @@
 }
 
 .header-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: @headerH;
     height: @headerH;
     line-height: @headerH;
@@ -30,6 +33,10 @@
 
     &:hover {
         color: @textPrimaryColor;
+    }
+
+    .icon {
+        width: 15px;
     }
 }
 
