--- a/themes/indigo/source/css/_partial/layout.less
+++ b/themes/indigo/source/css/_partial/layout.less
@@ -87,10 +87,8 @@
             padding: 0 @menuPadding;
 
             .icon {
-                position: absolute;
-                top: 0;
-                left: @menuPadding;
-                line-height: inherit;
+                width: 18px;
+                margin-right: 24px;
             }
 
             &:hover,
@@ -105,8 +103,7 @@
         }
 
         a {
-            display: block;
-            padding-left: @menuPadding*2.4;
+            display: flex;
             height: @navH;
             line-height: @navH;
             font-weight: 500;
@@ -196,6 +193,10 @@
     }
     .bottom {
         padding: 16px;
+    }
+
+    .icon {
+        width: 13px;
     }
 }
 
