--- a/themes/indigo/source/css/_partial/article.less
+++ b/themes/indigo/source/css/_partial/article.less
@@ -508,6 +508,7 @@
     }
 
     .post-nav {
+        column-gap: 16px;
         padding: 0;
         margin-left: -16px;
         margin-right: -16px;
@@ -532,10 +533,10 @@
         overflow-y: hidden;
     }
 
-    .comments {
-        margin-left: -16px;
-        margin-right: -16px
-    }
+    // .comments {
+    //     margin-left: -16px;
+    //     margin-right: -16px
+    // }
 }
 
 @media screen and (max-width:480px) {
