--- a/themes/indigo/source/css/_partial/article.less
+++ b/themes/indigo/source/css/_partial/article.less
@@ -6,7 +6,8 @@
     +.post-article {
         float: left;
         width: 80%;
-        padding-right: 30px;
+        // timon modified
+        // padding-right: 30px;
     }
 }
 
